--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,7 @@
   "type": "commonjs",
   "description": "",
   "dependencies": {
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
